--- a/tasks/templates/task.html
+++ b/tasks/templates/task.html
@@ -16,8 +16,7 @@
                     <div class="card-body">
                         <div class="mb-3">
                             <h6 class="fw-lighter">Description</h6>
-                            <p class="text-muted">
-                                {{ task.description }}
+                            <p class="text-muted" style="white-space: pre-wrap;">{{ task.description }}
                             </p>
                         </div>
                         <div>
